refactor: 清除后端 Java 代码告警（5 模块 / 8 类告警）
- [A] unchecked: CacheUtils.get() 强转加窄域 @SuppressWarnings
- [B] rawtypes: DAG.java AbstractMap.SimpleEntry 改用 diamond
- [E] unused: 删除 ServerLifeCycleManager / PropertyUtils / JschUtils 无用方法及 Application.userDir/getApiPrefix/getServerPrefix
- [F] deprecated: UnixUtils 废弃 execWithStatus→exec; ServiceInstallServiceImpl 迁移至 NexusFacade; storage 实现加 @SuppressWarnings("deprecated")
- [J] @NonNull: 5 个 HandlerInterceptor.preHandle 参数补注解；顺带修 UserPermissionHandler 的 unused logger 与 instanceof 模式匹配
- [K] 空 Javadoc: 批量删除 147 处无描述 @param / @return 标签
- [L] 非标准 tag: 批量删除 130 个文件中 @date / @email / @ClassName / @Title: 等非标签
- varargs: AlertGroupController.in() 改传 Arrays.asList() 消除类型歧义

结果: -Xlint:all 编译告警归零（保留 grpc-api protoc 生成 stub 中的抑制）